tests/outref/TAK05.ref

select id from names as "n1";
select id from names as "n2";
select id from names as 'lmo';
select id from names as 'klm';
OCTO> select id from names as "n1";
id
0
1
2
3
4
5
(6 rows)
OCTO> select id from names as "n2";
id
0
1
2
3
4
5
(6 rows)
LINE 4:1: select id from names as 'lmo';
                                  ^^^^^
syntax error, unexpected LITERAL
OCTO> select id from names as 'lmo';
LINE 5:1: select id from names as 'klm';
                                  ^^^^^
syntax error, unexpected LITERAL
OCTO> select id from names as 'klm';
OCTO> 
